# py_templaterepo

./: README.md  setup.cfg
src/py_templaterepo/: __init__.py  client.py  constants.py  model.py
