[metadata]
name = py_templaterepo
version = file: VERSION.txt
author = Dan Bunker
author_email = dbunked@gmail.com
description = A python package for interacting with the templaterepo API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ejsuncy/py_templaterepo
project_urls =
    Bug Tracker = https://github.com/ejsuncy/py_templaterepo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
